--- a/kuti-social/Info.plist
+++ b/kuti-social/Info.plist
@@ -41,5 +41,27 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb158469204663589</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>158469204663589</string>
+	<key>FacebookDisplayName</key>
+	<string>Kuti Social</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<key></key>
+	<string></string>
 </dict>
 </plist>
