--- a/kuti-social/GoogleService-Info.plist
+++ b/kuti-social/GoogleService-Info.plist
@@ -36,5 +36,7 @@
 	<string>1:937696422117:ios:35b16a9ccf68fcdb</string>
 	<key>DATABASE_URL</key>
 	<string>https://kuti-social.firebaseio.com</string>
+	<key>CFAppleHelpAnchor</key>
+	<string>test</string>
 </dict>
 </plist>
