4th gitignore test

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
+~/Developer/Swift/Devslopes/core-iOS/social-app/kuti-social/kuti-social/GoogleService-Info.plist
+*.plist
 /kuti-social/GoogleService-Info.plist
+kuti-social/GoogleService-Info.plist
